2017-5-x
	-Added absorb staff back in. When did I even delete that code?
	-Fixed healing specials healing for more than the enemy's remaining HP
	-Fixed S skills not actually being taken off when you switch hero
	-Fixed defiant res not working because I was looking for the skill "resiant res"

2017-4-26:
	-Added new skills: Watersweep, Ragnell, Heavy Blade, Spur Def Res, Guard

2017-4-20:
	-Added Eckesachs.
	-Blazed it.

2017-4-16:
	-Added rarities below 5*.
	-Added the new skills (windsweeper, firesweep bow...)
	-Added S skills.
	-Added option to hide unaffecting skills from selection.
	-Changed skill select and rules UI to fit new stuff
	-Fixed gigantic issue with debuffs not being calculated properly that I'm astonished nobody noticed. 
		As I understand it, debuffs are only taken off after a unit does its turn.
		If a unit is debuffed after attacking and gets attacked on the next turn, it's still debuffed when it gets to attack again.
	-Fixed wary fighter interactions, I think??

2017-4-3:
	-Added code and images for bunny skills.
	-Added bunny images.
	-Added damage taken input.
	-Added merge bonuses.
	-Added option to exclude healers.
	-Added special pre-charge.
	-Auto-calculations now take effect half a second after you stop changing a number input.
	-Fixed breaker skills not interacting properly with skills like quick riposte and wary fighter.
	-Fixed AOE skills not occuring before vantage
	-Changed database model - now base stats + growth levels = max stats instead of max stats - growth values = base stats
	-Added more variables to store enemy information so the calculator doesn't have to grab it from inputs every time

2017-3-27:
	-Fixed +/-4 boons/banes.
	-Added calculate button. Added auto-calculate as an option.
	-Added previous results output.
	-Added option to flip results sort.

2017-3-26:
	Focused on fixing bugs. Next update will be focused on adding more features.
	-Moved activehero class to new file.